kubernetes/apps/kube-prometheus-stack/templates/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-apm
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - local-https
  routes:
  - kind: Rule
    match: Host(`apm.vaisanen.cloud`) && PathPrefix(`/grafana`)
    services:
    - kind: Service
      name: grafana
      port: 80
  - kind: Rule
    match: Host(`apm.vaisanen.cloud`) && PathPrefix(`/alertmanager`)
    services:
    - kind: Service
      name: prometheus-alertmanager
      port: 9093
  - kind: Rule
    match: Host(`apm.vaisanen.cloud`) && PathPrefix(`/prometheus`)
    services:
    - kind: Service
      name: prometheus-prometheus
      port: 9090
  tls:
    secretName: apm-certificate-secret
